--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -10,11 +10,14 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"></script>
   <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-  <script src="https://cdn.tailwindcss.com"></script>
-<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
-    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link href="
+https://cdn.jsdelivr.net/npm/tailwindcss@3.3.5/lib/css/preflight.min.css
+" rel="stylesheet">
+  <script src="
+https://cdn.jsdelivr.net/npm/tailwindcss@3.3.5/lib/index.min.js
+"></script>
+  
+
 
 </head>
 
