--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,16 +7,10 @@
     <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <script src="https://cdn.tailwindcss.com"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="https://cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css"></script>
   <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
-  <link href="
-https://cdn.jsdelivr.net/npm/tailwindcss@3.3.5/lib/css/preflight.min.css
-" rel="stylesheet">
-  <script src="
-https://cdn.jsdelivr.net/npm/tailwindcss@3.3.5/lib/index.min.js
-"></script>
-  
 
 
 </head>
